syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message RequestMessage {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message ResponseMessage {
  int32 value = 1;
}

service SequenceService {
  rpc getSequence(RequestMessage) returns (stream ResponseMessage);
}